# Migi_solution_interview

./: CMakeLists.txt  main.cpp  main.qml  studentmodel.cpp  studentmodel.h
